--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const nightNames = Object.keys(pokerNights).map((night) => {
 <Layout title="Midtbo's Meatballs Poker">
 	<main>
 		<h1>Midtbo's Meatballs Poker Stats</h1>
-		<img src="/public/magnus-poker.jpg" />
+		<img src="/magnus-poker.jpg" />
 		<ul>
 			{
 				nightNames.reverse().map((night) => (
