--- a/src/pages/nights/[night].astro
+++ b/src/pages/nights/[night].astro
@@ -6,77 +6,77 @@ import { parseNight } from "../../scripts/poker-parser";
 const { night } = Astro.params;
 
 export async function getStaticPaths() {
-    const pokerNights = await import.meta.glob("/public/records/*.csv", {
-        as: "raw",
-    });
-    const nightNames = Object.keys(pokerNights).map((night) => {
-        const name = night.split("/").at(-1);
-        return name?.split(".")[0];
-    });
+	const pokerNights = await import.meta.glob("/public/records/*.csv", {
+		as: "raw",
+	});
+	const nightNames = Object.keys(pokerNights).map((night) => {
+		const name = night.split("/").at(-1);
+		return name?.split(".")[0];
+	});
 
-    return nightNames.map((night) => ({
-        params: {
-            night: night,
-        },
-    }));
+	return nightNames.map((night) => ({
+		params: {
+			night: night,
+		},
+	}));
 }
 
 const pokerNights = await import.meta.glob("/public/records/*.csv", {
-    as: "raw",
+	as: "raw",
 });
 
 const pokerNight = await pokerNights["/public/records/" + night + ".csv"]!();
 const bankerInfo: { [key: string]: any } = banker;
 const players = parseNight(
-    pokerNight,
-    bankerInfo[night!].banker,
-    bankerInfo[night!].buyin
+	pokerNight,
+	bankerInfo[night!].banker,
+	bankerInfo[night!].buyin
 );
 players.sort((a, b) => b.net - a.net);
 ---
 
 <Layout title={`Night ${night}`}>
-    <main>
-        <h1><a href="../"> {"<-"}</a> {night}</h1>
-        {
-            players.map((player) => (
-                <div>
-                    <h3>
-                        {player.name}
-                        <span class={player.net >= 0 ? "green" : "red"}>
-                            {(player.net > 0 ? "+" : "") +
-                                (player.net < 0 ? "-" : "") +
-                                "$" +
-                                Math.abs(player.net)}
-                        </span>
-                    </h3>
-                    <div>
-                        <span>
-                            buy in <b class="red">${player.buyin}</b>
-                        </span>
-                        <span>
-                            cash out <b class="green">${player.cashout}</b>
-                        </span>
-                    </div>
-                </div>
-            ))
-        }
-    </main>
+	<main>
+		<h1><a href="../"> {"<-"}</a> {night}</h1>
+		{
+			players.map((player) => (
+				<div>
+					<h3>
+						<a href={`/player/${player.name}`}>{player.name}</a>
+						<span class={player.net >= 0 ? "green" : "red"}>
+							{(player.net > 0 ? "+" : "") +
+								(player.net < 0 ? "-" : "") +
+								"$" +
+								Math.abs(player.net)}
+						</span>
+					</h3>
+					<div>
+						<span>
+							buy in <b class="red">${player.buyin}</b>
+						</span>
+						<span>
+							cash out <b class="green">${player.cashout}</b>
+						</span>
+					</div>
+				</div>
+			))
+		}
+	</main>
 </Layout>
 
 <style>
-    h3 {
-        margin-bottom: 0.5rem;
-    }
+	h3 {
+		margin-bottom: 0.5rem;
+	}
 
-    .green {
-        color: green;
-    }
-    .red {
-        color: red;
-    }
+	.green {
+		color: green;
+	}
+	.red {
+		color: red;
+	}
 
-    div > span {
-        margin-right: 0.5rem;
-    }
+	div > span {
+		margin-right: 0.5rem;
+	}
 </style>
